chore: spotlessJavaApply